# tech_blog

./: README.md  pyproject.toml
decorators/: arg_from_file.md  arg_from_file.py
perspective/: perspective_intro.md  table_experiments.ipynb
